Remove deprecated classes (#1013)