@@ -55,8 +55,6 @@ if (project.sourceCompatibility.isJava11Compatible()) {
             jvmArgs += [
                 '--add-opens', "$moduleName/org.trellisldp.http.impl=org.junit.platform.commons",
                 '--add-opens', "$moduleName/org.trellisldp.http.impl=org.mockito",
-                '--add-opens', "$moduleName/org.trellisldp.http.core=org.junit.platform.commons",
-                '--add-opens', "$moduleName/org.trellisldp.http.core=org.mockito",
                 '--add-opens', "java.base/java.net=jersey.client",
             ]
         }
